@@ -12,7 +12,8 @@ inline uint8_t test(uintptr_t addr) __reentrant
         return *(volatile uint8_t __xdata *)(addr);
 }
 
-uint8_t dat1, dat2;
+__xdata uint8_t dat1;
+uint8_t dat2;
 
 void call(void) /* Unbalanced stack pointer in this function */
 {
@@ -21,10 +22,10 @@ void call(void) /* Unbalanced stack pointer in this function */
 	
 void testBug(void)
 {
-#if !defined(__SDCC_mcs51) && !defined(__SDCC_ds390) // Bug #2752
+//#if !defined(__SDCC_mcs51) && !defined(__SDCC_ds390) // Bug #2752
 	dat1 = 0x5a;
 	call();
 	ASSERT (dat2 == 0x5a);
-#endif
+//#endif
 }
 
